--- a/starship.toml
+++ b/starship.toml
@@ -18,8 +18,6 @@ disabled = true
 # [git_branch]
 # format = '[$symbol$branch]($style) '
 
-# [aws]
-# format = '[$symbol($profile )(\($region\) )(\[$duration\])]($style)'
 
 [username]
 show_always = true
@@ -29,8 +27,10 @@ style_user = "bold dimmed green"
 
 
 [aws]
-format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
-symbol = " "
+format = '[$symbol($profile )(\($region\) )(\[$duration\])]($style)'
+# format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
+symbol = ""
+# symbol = " "
  #symbol = "aws "
 
 [cmake]
@@ -38,7 +38,7 @@ format = '\[[$symbol($version)]($style)\]'
  #symbol = "cmake "
 
 [cmd_duration]
-format = "[⏱ $duration]($style)"
+format = "[⏱ $duration ]($style)"
 
 [conda]
 format = '\[[$symbol$environment]($style)\]'
@@ -120,7 +120,9 @@ format = '\[[$symbol($version)]($style)\]'
  #symbol = "nim "
 
 [nix_shell]
-format = '\[[$symbol$state( \($name\))]($style)\]'
+# format = '\[[$symbol$state( \($name\))]($style)\]'
+format = '\[[$symbol$state]($style)\]'
+symbol = " "
  #symbol = "nix "
 
 [nodejs]
